Rewrite to eris

--- a/config.json
+++ b/config.json
@@ -1,4 +1,7 @@
-{   "insults":
+{
+	"debug": false,
+
+	"insults":
     [
         "I wish you had legs, so I could legswipe you.",
         "you're a bitch.",
